--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.16.8",
     "babel-plugin-styled-components": "^2.0.2",
     "css-loader": "^6.5.1",
     "eslint": "^8.6.0",
@@ -15,14 +16,15 @@
   },
   "dependencies": {
     "@babel/core": "^7.16.7",
-    "@babel/plugin-transform-runtime": "^7.16.8",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
+    "axios": "^0.24.0",
     "babel-loader": "^8.2.3",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "regenerator-runtime": "^0.13.9",
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0",
     "webpack": "^5.66.0",
